--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
         <div class="logic-item">PROCESO</div>
         <div class="logic-item">SALIDA</div>
     </div>
+    <div style="text-align: center; margin-top: 40px; padding-bottom: 50px;">
+   
+    <a href="https://www.linkedin.com/in/TU_PERFIL" target="_blank"
+       style="padding: 12px 25px; background-color: #0077b5; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block; transition: 0.3s;">
+       Contactar en LinkedIn
+    </a>
+
+    <div style="margin-top: 25px; font-family: monospace; color: #555;">
+        <p style="margin-bottom: 5px; font-size: 0.9em; text-transform: uppercase; letter-spacing: 1px;">O si prefieres, escríbeme a:</p>
+        <strong style="font-size: 1.2em; color: #222;">tu_correo@gmail.com</strong>
+    </div>
+
+</div>
     <p>Si el <strong>input</strong> es incorrecto, el resultado será erróneo. No importa la potencia de tu servidor ni la sofisticación de tu algoritmo.</p>
 </section>
 <div style="text-align: center; margin-top: 30px;">
