--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </ul>
     <div style="text-align: center; margin-top: 40px; padding-bottom: 50px;">
    
-    <a href="https://www.linkedin.com/in/TU_PERFIL" target="_blank"
+    <a href="https://www.linkedin.com/in/xavier-catal%C3%A1n-aznar-251453b/" target="_blank"
        style="padding: 12px 25px; background-color: #0077b5; color: white; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block; transition: 0.3s;">
        Contactar en LinkedIn
     </a>
