--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <div style="margin-top: 25px; font-family: monospace; color: #555;">
         <p style="margin-bottom: 5px; font-size: 0.9em; text-transform: uppercase; letter-spacing: 1px;">O si prefieres, escríbeme a:</p>
-        <strong style="font-size: 1.2em; color: #222;">tu_correo@gmail.com</strong>
+        <strong style="font-size: 1.2em; color: #222;">socxaviercatalan@gmail.com</strong>
     </div>
 </section>
 
